--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,30 +1,55 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: streamlined-scs # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
+  - name: Pagina Web Streamlined
+    url: https://streamlined.cl
+  - name: Central Telefonica Streamlined
+    url: https://freepbx.streamlined-scs.cl/admin/config.php
+  - name: NAS Streamlined
+    url: https://nas.streamlined-scs.cl
+  - name: Workspace Streamlined
+    url: https://workspace.streamlined-scs.cl
+  - name: SMGI Metabase Streamlined
+    url: https://mgi.streamlined-scs.cl
+  - name: EAM Cencosud
+    url: https://eam.cencosud.com/web/base/logindisp?tenant=SCSPROD
+  - name: EAM Maara
+    url: http://eam.maaracorp.com:8081/web/base/logindisp?tenant=EAM
+  - name: EAM Blumar
+    url: http://eam.blumar.com/web/base/logindisp?tenant=EAMPROD
+  - name: SEAM Dreams
+    url: https://seam-md.streamlined-scs.cl
+  - name: SEAM Highlift
+    url: https://seam-hl.streamlined-scs.cl
+  - name: SEAM Grupo America
+    url: https://seam-ga.streamlined-scs.cl
+  - name: WSDL SAM Highlift
+    url: https://wsdl-hl.streamlined-scs.cl/api/Scsdocumentos/getLogo
+  - name: WSDL SAM Grupo America
+    url: https://wsdl-ga.streamlined-scs.cl/api/Scsdocumentos/getLogo
+  - name: WSDL SAM Dreams
+    url: https://wsdl-md.streamlined-scs.cl/api/Scsdocumentos/getLogo
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
+
+assignees:
+- streamlined-scs
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  # cname: demo.upptime.js.org
+  baseUrl: /upptime
+  logoUrl: https://streamlined.cl/logos/logo%20SCS1.png
+  name: Streamlined SCS Upptime
+  introTitle: "**Upptime Streamlined** es nuestra web de control del upptime de paginas, powered entirely by GitHub."
+  introMessage: Esta es una pagina que representa el estado de una pagina en **real-time**
   navbar:
-    - title: Status
-      href: /
-    - title: GitHub
+    - title: Status SCS Chile
+      href: https://streamlined.cl
+    - title: GitHub SCS
       href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
